2011-01-27  Tobias Burnus  <burnus@net-b.de>

PR fortran/47474
        * trans-decl.c (gfc_generate_function_code): Fix init
        of allocatable result variable with allocatable components.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169340 138bc75d-0d04-0410-961f-82ee72b054a4